--- a/app/views/layouts/home.html.erb
+++ b/app/views/layouts/home.html.erb
@@ -21,7 +21,7 @@
           <a class="float-md-start mb-0" href="/" style="font-size:30px; color: #037394;font-weight: bold;text-decoration: none;">Amica</a>
           <nav class="nav nav-masthead　bg-blue justify-content-center float-md-end">
             <a class="nav-link" href="<%= new_user_registration_path %>">新規登録</a>
-            <a class="nav-link" href="<%= new_user_session_path %>">ログイン</a>
+            <a class="nav-link" href="<%= new_user_registration_path %>">ログイン</a>
             <a class="nav-link" href="<%= about_path %>">Amicaについて</a>
             <a class="nav-link" href="<%= contact_path %>">お問い合わせ</a>
           </nav>
