--- a/app/views/profiles/index.html.erb
+++ b/app/views/profiles/index.html.erb
@@ -7,7 +7,7 @@
           <p class="me-3">ユーザーを検索</p>
           <div class="input-group">
             <span class="input-group-text" id="basic-addon1">@</span>
-            <%= f.text_field :name, class: "form-control",placeholder: "UserName",aria: {label:"Username",describedby: "basic-addon1"}%>
+            <%= f.text_field :name, class: "form-control",placeholder: "UserID",aria: {label:"Username",describedby: "basic-addon1"}%>
           </div>
         <% end %>
       </nav>
@@ -101,20 +101,24 @@
   <div class="my-3 p-3 bg-white rounded shadow-sm">
     <h6 class="border-bottom pb-2 mb-0">おすすめユーザー</h6>
     <% @users.shuffle.first(5).each do |user| %>
+      <% pp current_user.id %>
+      <% pp user.id %>
       <% unless current_user.id == user.id %>
         <% unless current_user.following?(user) %>
-          <%= link_to profile_path(user.userid) do%>
-            <div class="d-flex text-muted pt-3">
-              <% if user.image.nil? %>
-                <%= image_tag "default_icon", class: "icon bd-placeholder-img flex-shrink-0 me-2 rounded",width: "40px",height: "40px" %>
-              <% else %>
-                <%= image_tag "/user_images/#{user.image}" , class: "icon bd-placeholder-img flex-shrink-0 me-2 rounded",width: "40px",height: "40px"%>
-              <% end %>
-                <p class="pb-3 mb-0 small lh-sm  border-bottom w-100">
-                  <strong class="d-block text-gray-dark"><%= user.name %> (<%= user.nickname %>)</strong>
-                  @<%= user.userid %>
-                </p>
-            </div>
+          <% unless user.userid == nil%>
+            <%= link_to profile_path(user.userid) do%>
+              <div class="d-flex text-muted pt-3">
+                <% if user.image.nil? %>
+                  <%= image_tag "default_icon", class: "icon bd-placeholder-img flex-shrink-0 me-2 rounded",width: "40px",height: "40px" %>
+                <% else %>
+                  <%= image_tag "/user_images/#{user.image}" , class: "icon bd-placeholder-img flex-shrink-0 me-2 rounded",width: "40px",height: "40px"%>
+                <% end %>
+                  <p class="pb-3 mb-0 small lh-sm  border-bottom w-100">
+                    <strong class="d-block text-gray-dark"><%= user.name %> (<%= user.nickname %>)</strong>
+                    @<%= user.userid %>
+                  </p>
+              </div>
+            <% end %>
           <% end %>
         <% end %>
       <% end %>
