レイアウトの最適化

--- a/app/views/home/static.html.erb
+++ b/app/views/home/static.html.erb
@@ -13,17 +13,19 @@
   <h1>利用規約</h1>
   <p>この利用規約（以下，「本規約」といいます。）は，Avails（以下，「当グループ」といいます。）がこのウェブサイト上で提供するサービス（以下，「本サービス」といいます。）の利用条件を定めるものです。登録ユーザーの皆さま（以下，「ユーザー」といいます。）には，本規約に従って，本サービスをご利用いただきます。</p>
 
-  第1条（適用）
-  本規約は，ユーザーと当グループとの間の本サービスの利用に関わる一切の関係に適用されるものとします。
-  当グループは本サービスに関し，本規約のほか，ご利用にあたってのルール等，各種の定め（以下，「個別規定」といいます。）をすることがあります。これら個別規定はその名称のいかんに関わらず，本規約の一部を構成するものとします。
-  本規約の規定が前条の個別規定の規定と矛盾する場合には，個別規定において特段の定めなき限り，個別規定の規定が優先されるものとします。
+  <h3>第1条（適用）</h3>
+  <p>本規約は，ユーザーと当グループとの間の本サービスの利用に関わる一切の関係に適用されるものとします。<br />
+  当グループは本サービスに関し，本規約のほか，ご利用にあたってのルール等，各種の定め（以下，「個別規定」といいます。）をすることがあります。これら個別規定はその名称のいかんに関わらず，本規約の一部を構成するものとします。<br />
+  本規約の規定が前条の個別規定の規定と矛盾する場合には，個別規定において特段の定めなき限り，個別規定の規定が優先されるものとします。</p>
 
-  第2条（利用登録）
-  本サービスにおいては，登録希望者が本規約に同意の上，当グループの定める方法によって利用登録を申請し，当グループがこの承認を登録希望者に通知することによって，利用登録が完了するものとします。
-  当グループは，利用登録の申請者に以下の事由があると判断した場合，利用登録の申請を承認しないことがあり，その理由については一切の開示義務を負わないものとします。
-  利用登録の申請に際して虚偽の事項を届け出た場合
-  本規約に違反したことがある者からの申請である場合
-  その他，当グループが利用登録を相当でないと判断した場合
+  <h3>第2条（利用登録）</h3>
+  <p>本サービスにおいては，登録希望者が本規約に同意の上，当グループの定める方法によって利用登録を申請し，当グループがこの承認を登録希望者に通知することによって，利用登録が完了するものとします。
+  当グループは，利用登録の申請者に以下の事由があると判断した場合，利用登録の申請を承認しないことがあり，その理由については一切の開示義務を負わないものとします。</p>
+  <ul>
+    <li>利用登録の申請に際して虚偽の事項を届け出た場合</li>
+    <li>本規約に違反したことがある者からの申請である場合</li>
+    <li>その他，当グループが利用登録を相当でないと判断した場合</li>
+  </ul>
 
   第3条（ユーザーIDおよびパスワードの管理）
   ユーザーは，自己の責任において，本サービスのユーザーIDおよびパスワードを適切に管理するものとします。
