--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -76,21 +76,21 @@
           </ul>
         </div>
       <% else %>
-        <ul class="navbar-nav me-auto m-0 mb-lg-0">
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              <i class="fas fa-box-open"></i>another
-            </a>
-            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <li>
-                <%= link_to 'サインアップ', new_user_registration_path,class: "link nav-link" %>
-              </li>
-              <li>
-                <%= link_to 'ログイン', new_user_session_path,class: "link nav-link" %>
-              </li>
-            </ul>
-          </li>
-        </ul>
+        <%= image_tag "default_icon.png" , class: "user_icon" %>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <%=link_to("Amica","/",class:"mb-0 lh-sm text-dark",style: "margin-left:7px;font-size:24px;text-decoration: none;font-weight:bold") %>
+          <ul class="navbar-nav me-auto m-0 mb-lg-0">
+            <li class="nav-item">
+              <%= link_to  "新規登録",new_user_registration_path,class: "icons nav-link" %>
+            </li>
+            <li class="nav-item">
+            <%= link_to  "ログイン",new_user_session_path,class: "icons nav-link" %>
+            </li>
+          </ul>
+        </div>
       <% end %>
     </div>
   </nav>
