cropの追加途中

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -9,7 +9,7 @@
  * compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
  * files in this directory. Styles in this file should be added after the last require_* statement.
  * It is generally better to create a new file per style scope.
- *
+ *= require cropper.min.css
  *= require_self
  */
 
@@ -56,6 +56,7 @@ header {
   border: solid 2px;
   border-radius: 30%;
   width: 45px;
+  height: 45px;
   margin-left: 7px;
 }
 
