--- a/app/views/mypages/edit.html.erb
+++ b/app/views/mypages/edit.html.erb
@@ -1,18 +1,23 @@
 <%= stylesheet_link_tag "mypages"%>
 <%= javascript_pack_tag 'mypages/edit'%>
 <head>
-  <script type="text/javascript" src="dist/cropper.js" charset="UTF-8"></script>
+  <script type="text/javascript" src="cropper.js" charset="UTF-8"></script>
 </head>
+
 <script>
-    function previewImage(obj)
-    {
+    function previewImage(obj){
         var fileReader = new FileReader();
         fileReader.onload = (function() {
             document.getElementById('preview').src = fileReader.result;
         });
         fileReader.readAsDataURL(obj.files[0]);
         document.getElementById("image_text").innerHTML = "選択した画像";
-    }
+    };
+    function test(){
+        alert("OK!")
+    };
+
+
 </script>
 
 
@@ -30,17 +35,18 @@
             <label>
               <input type="file" name="image" class="image_select"  accept='image/*' style="display: none" onchange="previewImage(this);">
               <% if @user.image? %>
-                <%= image_tag "/user_images/#{@user.image}",class: "user_image", style: "max-width:200px;"%>
+                <%= image_tag "/user_images/#{@user.image}", :size => '200x200' ,class: "user_image"%>
               <% else %>
-                <%= image_tag "default_icon" , class: "user_image", style: "max-width:200px;"%>
+                <%= image_tag "default_icon" , :size => '200x200', class: "user_image"%>
               <% end %>
             </label><br /><br />
             <p id="image_text">画像を選択してください</p>
             <p>
-              <img id="preview" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" style="max-width:200px;">
+              <img id="preview" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" style="max-width:200px; max-height: 200px" >
             </p>
         </div>
       </div>
+
 
       <div class="m-1">
          学科<br>
@@ -73,9 +79,33 @@
   </div>
 </div>
 
-<form id="form">
-  <div id="file-input"><input id="file-selecter" type="file" name="file" accept="image/jpeg, image/png"></div>
-  <div><canvas id="thumbnail" width="10" height="10"></canvas></div>
-  <input type="button" value="送信" onclick="submitResizeFile()">
-  <div id="message"></div>
-</form>
+
+
+<button type="button" class="btn btn-primary" onclick="test()">
+  test button
+</button>
+
+
+<!-- Button trigger modal -->
+<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal" >
+  Launch demo modal
+</button>
+
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        ...
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div>
+  </div>
+</div>
