cropの追加途中

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -92,6 +92,9 @@
           </ul>
         </div>
       <% end %>
+      <% if current_user.admin? %>
+        ★
+      <% end %>
     </div>
   </nav>
 </header>
