cropの追加途中

--- a/app/views/mypages/edit.html.erb
+++ b/app/views/mypages/edit.html.erb
@@ -1,10 +1,15 @@
 <%= stylesheet_link_tag "mypages"%>
-<%= javascript_pack_tag 'mypages/edit'%>
+<!---<%= javascript_pack_tag 'mypages/edit.js' %>--->
+<%= javascript_pack_tag 'edit_vue' %>
+<%= stylesheet_pack_tag 'hello_vue' %>
+
+
 <head>
   <script type="text/javascript" src="cropper.js" charset="UTF-8"></script>
 </head>
 
 <script>
+
     function previewImage(obj){
         var fileReader = new FileReader();
         fileReader.onload = (function() {
@@ -14,6 +19,47 @@
         document.getElementById("image_text").innerHTML = "選択した画像";
     };
 
+    function IconCrop(obj){
+        var fileReader = new FileReader();
+        fileReader.onload = (function() {
+            fileReader.cropper('destroy').removeAttr('src');
+            document.getElementById('icon_crop').src = fileReader.result;
+        });
+        fileReader.readAsDataURL(obj.files[0]);
+    }
+
+
+    // templete 要素の content 属性の有無を確認することで、
+    // ブラウザーが HTML template 要素に対応しているかテストします。
+    $(function () {
+        if ('content' in document.createElement('template')) {
+
+// 既存の HTML tbody と template の行を使って
+// table をインスタンス生成します。
+        var tbody = document.querySelector("tbody");
+        var template = document.querySelector('#productrow');
+
+// 新しい行を複製して表に挿入します。
+        var clone = template.content.cloneNode(true);
+        var td = clone.querySelectorAll("td");
+        td[0].textContent = "1235646565";
+        td[1].textContent = "Stuff";
+
+        tbody.appendChild(clone);
+
+// 新しい行を複製して表に挿入します。
+        var clone2 = template.content.cloneNode(true);
+        td = clone2.querySelectorAll("td");
+        td[0].textContent = "0384928528";
+        td[1].textContent = "Acme Kidney Beans 2";
+
+        tbody.appendChild(clone2);
+
+    } else {
+// HTML template 要素に対応していないので
+// 表に行を追加するほかの方法を探します。
+    }
+    })
 </script>
 
 
@@ -121,7 +167,4 @@
     </div>
   </div>
 </div>
-
-
-
 
