--- a/app/views/home/static.html.erb
+++ b/app/views/home/static.html.erb
@@ -102,7 +102,7 @@
   <p>当グループは，必要と判断した場合には，ユーザーに通知することなくいつでも本規約を変更することができるものとします。なお，本規約の変更後，本サービスの利用を開始した場合には，当該ユーザーは変更後の規約に同意したものとみなします。</p>
 
   <h3>第12条（個人情報の取扱い）</h3>
-  <p>当グループは，本サービスの利用によって取得する個人情報については，当グループ「プライバシーポリシー」に従い適切に取り扱うものとします。</p>
+  <p>当グループは，本サービスの利用によって取得する個人情報については，当グループ「<%= link_to("プライバシーポリシー",privacy_path) %>」に従い適切に取り扱うものとします。</p>
 
   <h3>第13条（通知または連絡）</h3>
   <p>ユーザーと当グループとの間の通知または連絡は，当グループの定める方法によって行うものとします。当グループは,ユーザーから,当グループが別途定める方式に従った変更届け出がない限り,現在登録されている連絡先が有効なものとみなして当該連絡先へ通知または連絡を行い,これらは,発信時にユーザーへ到達したものとみなします。</p>
