--- a/app/views/communities/index.html.erb
+++ b/app/views/communities/index.html.erb
@@ -1,44 +1,42 @@
-<html>
-  <%= stylesheet_link_tag 'communities', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <h1>コミュニティ</h1>
-    <div class="btn-horizontal-border">
-      <p>
-      <%=link_to "コミュニティ新規作成","/communities/new"%>
-      </p>
-    </div>
-  <div class="container-fluid">
-    <div class="row row-cols-1 row-cols-sm-2 row-cols-md-4 g-4  g-lg-4">
-      <% @community.each do |community| %>
-        <%= link_to community_path(community.id), style: "text-decoration: none" do %>
-          <div class="col">
+<%= stylesheet_link_tag 'communities', media: 'all', 'data-turbolinks-track': 'reload' %>
+<h1>コミュニティ</h1>
+<div class="btn-horizontal-border">
+  <p>
+    <%=link_to "コミュニティ新規作成","/communities/new"%>
+  </p>
+</div>
+<div class="container">
+  <div class="row row-cols-1 row-cols-sm-2 row-cols-md-4 g-4  g-lg-4">
+    <% @community.each do |community| %>
+      <%= link_to community_path(community.id), style: "text-decoration: none" do %>
+        <div class="col">
+          <div class="card">
+              <% if community.icon? %>
+              <%= image_tag "/communities_image/#{community.icon}",class: "img-fluid" %><br>
+            <% else %>
+              <%= image_tag "/communities_image/default_icon.png/", class: "img-fluid" %><br>
+            <% end %>
+            <div class="carddy">
+              <h5 class="card-title"><%= community.name %></h5>
+              <p class="card-text"><%= community.content .truncate(15, omission: '...')%></p>
+            </div>
             <div class="card">
-                <% if community.icon? %>
-                  <%= image_tag "/communities_image/#{community.icon}",class: "img-fluid" %><br>
-                <% else %>
-                  <%= image_tag "/communities_image/default_icon.png/", class: "img-fluid" %><br>
-                <% end %>
-                <div class="carddy">
-                  <h5 class="card-title"><%= community.name %></h5>
-                  <p class="card-text"><%= community.content .truncate(15, omission: '...')%></p>
-                </div>
-                <div class="card">
-                  <ul class="list-group list-group-flush">
-                    <li class="list-group-item">a</li>
-                    <li class="list-group-item">Dapibus ac facilisis in</li>
-                    <li class="list-group-item">Vestibulum at eros</li>
-                  </ul>
-                </div>
-                <div class="btn-group">
-                  <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                  <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
-                </div>
-                <div class="card-footer">
-                  <small class="text-muted">Created by <%= @user.find(community.user_id).nickname %></small>
-              </div>
+              <ul class="list-group list-group-flush">
+                <li class="list-group-item">a</li>
+                <li class="list-group-item">Dapibus ac facilisis in</li>
+                <li class="list-group-item">Vestibulum at eros</li>
+              </ul>
+            </div>
+            <div class="btn-group">
+              <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+              <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+            </div>
+            <div class="card-footer">
+              <small class="text-muted">Created by <%= @user.find(community.user_id).nickname %></small>
             </div>
           </div>
-        <% end %>
+        </div>
       <% end %>
-    </div>
+    <% end %>
   </div>
-</html>
+</div>
