--- a/app/views/mypages/edit.html.erb
+++ b/app/views/mypages/edit.html.erb
@@ -1,7 +1,6 @@
 <%= stylesheet_link_tag "mypages"%>
-<!---<%= javascript_pack_tag 'mypages/edit.js' %>--->
-<%= javascript_pack_tag 'edit_vue' %>
-<%= stylesheet_pack_tag 'hello_vue' %>
+<%= javascript_pack_tag 'mypages/edit' %>
+
 
 
 <head>
