--- a/app/views/timelines/_post.html.erb
+++ b/app/views/timelines/_post.html.erb
@@ -1,22 +1,46 @@
 <div class="panel-content panel-activity">
-  <p><%= user.find(post.userid).nickname %></p>
-  <p><%= post.content %></p>
-  <p><%= post.created_at.to_s(:datetime_jp) %></p>
 
-  <% if current_user.liked_by?(post.id) %>
-    <%= link_to timeline_like_path(post.id,current_user.id), method: :delete , remote: true do%>
-      <i class="fas fa-heart"></i>
+  <div class="d-flex text-muted pt-3">
+    <% if user.find(post.userid).image.nil? %>
+      <%= image_tag "/user_images/default_icon.png", class: "icon bd-placeholder-img flex-shrink-0 me-2 rounded",width: "40px",height: "40px" %>
+    <% else %>
+      <%= image_tag "/user_images/#{user.find(post.userid).image}" , class: "icon bd-placeholder-img flex-shrink-0 me-2 rounded",width: "40px",height: "40px"%>
     <% end %>
-    <%= post.likes.count %>
-  <% else %>
-    <%= link_to timeline_likes_path(post.id), method: :post, remote: true do %>
-      <i class="far fa-heart"></i>
-    <% end %>
-    <%= post.likes.count %>
-  <% end %>
-  <% if post.userid == current_user.id%>
-      <%= link_to(timeline_path(post.id),method: :delete) do%>
-        <i class="fas fa-trash"></i>
-      <% end %>
-    <% end %>
+
+
+    <p class="pb-3 mb-0 lh-sm border-bottom w-100">
+      <strong class="text-dark" style="font-size:20px;margin: 0"><%= user.find(post.userid).nickname %></strong>
+      <span class="text-gray small" style="margin: 0">@<%= user.find(post.userid).userid %></span>
+      <br />
+      <br />
+      <span class="text-dark" style="font-size:18px; margin: 0;"><%= post.content %></span>
+      <br />
+    </p>
+  </div>
+
+  <div class="d-flex justify-content-between">
+        <div style="margin-left: 48px">
+          <% if current_user.liked_by?(post.id) %>
+            <%= link_to timeline_like_path(post.id,current_user.id), method: :delete , remote: true do%>
+              <i class="fas fa-heart"></i>
+            <% end %>
+            <%= post.likes.count %>
+          <% else %>
+            <%= link_to timeline_likes_path(post.id), method: :post, remote: true do %>
+              <i class="far fa-heart"></i>
+            <% end %>
+            <%= post.likes.count %>
+          <% end %>
+          <% if post.userid == current_user.id%>
+            <%= link_to(timeline_path(post.id),method: :delete) do%>
+              <i class="fas fa-trash"></i>
+            <% end %>
+          <% end %>
+        </div>
+        <div>
+          <%= post.created_at.to_s(:datetime_jp) %>
+        </div>
+    </div>
+  </div>
+
 </div>
