--- a/app/views/timelines/index.html.erb
+++ b/app/views/timelines/index.html.erb
@@ -1,31 +1,48 @@
-<head>
 <%= stylesheet_link_tag 'timelines', media: 'all', 'data-turbolinks-track': 'reload' %>
-<%= stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+<%= javascript_pack_tag 'timeline/main', 'data-turbolinks-track': 'reload' %>
 
-  <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.2/css/all.css" integrity="sha384-/rXc/GQVaYpyDdyxK+ecHPVYJSN9bmVFBvjA/9eOB+pb3F2w2N6fc5qB9Ew5yIns" crossorigin="anonymous">
-</head>
-
-<body>
-<div class="border border-5 rounded" style="margin: 50px">
-  <div class="timeline mx-auto" >
-    <ul class="header-menus">
-        <%= form_for(@create ,url:timelines_path) do |f|%>
-          <div class="form-group">
-            <%= f.text_area :content, placeholder:"タイムラインを投稿してください",class: "form-control" %>
-          </div>
-          <%= f.submit "投稿"%>
-        <% end %>
-    </ul>
-
-    <% @posts.each do |p| %>
-      <% unless current_user.id != p.userid and current_user.following?(@user.find(p.userid)) == false %>
-        <div id="post_<%= p.id %>">
-          <%= render "timelines/post",post:p, user:@user %>
-        </div>
-        <% end %>
-    <% end %>
+<body class="bg-light">
+  <div class="nav-scroller bg-white shadow-sm">
+    <nav class="nav nav-underline" aria-label="Secondary navigation">
+      <a class="nav-link active" aria-current="page" href="#">友達
+        <span class="badge bg-light text-dark rounded-pill align-text-bottom"><%=current_user.matchers.count %></span>
+      </a>
+      <a class="nav-link" href="#">
+        フォロー中
+        <span class="badge bg-light text-dark rounded-pill align-text-bottom"><%=current_user.followings_list.count %></span>
+      </a>
+      <a class="nav-link" href="#">最新</a>
+      <a class="nav-link" href="#">おすすめ</a>
+    </nav>
   </div>
-</div>
+
+  <p class="notice"><%= notice %></p>
+  <p class="alert"><%= alert %></p>
+
+  <main class="container">
+    <div class="align-items-center p-3 my-3 text-white bg-light rounded shadow-sm">
+      <%= form_for(@create ,url:timelines_path) do |f|%>
+        <div class="FlexTextarea form-group mb-2">
+          <div class="FlexTextarea__dummy" aria-hidden="true"></div>
+          <%= f.text_area :content, placeholder:"タイムラインを投稿してください",maxlength:"280",id:"FlexTextarea",class: "FlexTextarea__textarea form-control" %>
+        </div>
+        <div class="d-grid gap-2 d-md-flex justify-content-md-end">
+          <%= f.submit "投稿", class:"btn btn-primary"%>
+        </div>
+      <% end %>
+    </div>
+
+    <div class="my-3 p-3 bg-white rounded shadow-sm">
+      <% @posts.each do |p| %>
+        <% unless current_user.following?(@user.find(p.userid)) == false %>
+          <div id="post_<%= p.id %>">
+            <%= render "timelines/post",post:p, user:@user %>
+          </div>
+        <% end %>
+      <% end %>
+    </div>
+  </main>
+
+  <script src="../assets/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="offcanvas.js"></script>
 </body>
