yurisiさんが変更

--- a/app/views/timelines/index.html.erb
+++ b/app/views/timelines/index.html.erb
@@ -20,7 +20,7 @@
   <p class="alert"><%= alert %></p>
 
   <main class="container">
-    <div class="align-items-center p-3 my-3 text-white bg-light rounded shadow-sm">
+    <div class="align-items-center p-3 my-3 text-dark bg-light rounded shadow-sm">
       <%= form_for(@create ,url:timelines_path) do |f|%>
         <div class="FlexTextarea form-group mb-2">
           <div class="FlexTextarea__dummy" aria-hidden="true"></div>
