--- a/app/views/timelines/_post.html.erb
+++ b/app/views/timelines/_post.html.erb
@@ -1,6 +1,6 @@
 <div class="panel-content panel-activity">
 
-  <div class="d-flex text-muted pt-3">
+  <div class="d-flex text-muted">
     <% if user.find(post.userid).image.nil? %>
       <%= image_tag "/user_images/default_icon.png", class: "icon bd-placeholder-img flex-shrink-0 me-2 rounded",width: "40px",height: "40px" %>
     <% else %>
@@ -8,9 +8,10 @@
     <% end %>
 
 
-    <p class="pb-3 mb-0 lh-sm border-bottom w-100">
+    <p class="pb-3 mb-0 lh-sm w-100">
       <strong class="text-dark" style="font-size:20px;margin: 0"><%= user.find(post.userid).nickname %></strong>
       <span class="text-gray small" style="margin: 0">@<%= user.find(post.userid).userid %></span>
+      <span class="text-gray small"><i class="far fa-clock clock-icon"></i><%= time_ago_in_words(post.created_at) %></span>
       <br />
       <br />
       <span class="text-dark" style="font-size:18px; margin: 0;"><%= post.content %></span>
@@ -19,28 +20,26 @@
   </div>
 
   <div class="d-flex justify-content-between">
-        <div style="margin-left: 48px">
-          <% if current_user.liked_by?(post.id) %>
-            <%= link_to timeline_like_path(post.id,current_user.id), method: :delete , remote: true do%>
-              <i class="fas fa-heart"></i>
-            <% end %>
-            <%= post.likes.count %>
-          <% else %>
-            <%= link_to timeline_likes_path(post.id), method: :post, remote: true do %>
-              <i class="far fa-heart"></i>
-            <% end %>
-            <%= post.likes.count %>
-          <% end %>
-          <% if post.userid == current_user.id%>
-            <%= link_to(timeline_path(post.id),method: :delete) do%>
-              <i class="fas fa-trash"></i>
-            <% end %>
-          <% end %>
-        </div>
-        <div>
-          <%= post.created_at.to_s(:datetime_jp) %>
-        </div>
+    <div style="margin-left: 50px">
+      <% if current_user.liked_by?(post.id) %>
+        <%= link_to timeline_like_path(post.id,current_user.id), method: :delete , remote: true do%>
+          <i class="fas fa-heart"></i>
+        <% end %>
+        <%= post.likes.count %>
+      <% else %>
+        <%= link_to timeline_likes_path(post.id), method: :post, remote: true do %>
+          <i class="far fa-heart"></i>
+        <% end %>
+        <%= post.likes.count %>
+      <% end %>
+
+    </div>
+    <div>
+      <% if post.userid == current_user.id%>
+        <%= link_to(timeline_path(post.id),method: :delete) do%>
+          <i class="fas fa-trash"></i>
+        <% end %>
+      <% end %>
     </div>
   </div>
-
 </div>
