コミュニティshowレイアウト

--- a/app/views/communities/show.html.erb
+++ b/app/views/communities/show.html.erb
@@ -6,7 +6,7 @@
     <%= image_tag "default_icon", class:"img-fluid"%><br>
     コミュニティ説明
     <p class="lead fw-normal border border-dark"><%=@community.content %></p>
-    参加者（参加人数を表示したい）
+    参加者（参加人数を表示したいい）
     <p class="lead fw-normal border border-dark">橋本環奈、本田翼、広瀬すず、広瀬アリス</p>
     タグ
     <p class="lead fw-normal border border-dark">#ウンチブリブリブリムストーン</p>
