--- a/app/views/communities/show.html.erb
+++ b/app/views/communities/show.html.erb
@@ -1,21 +1,17 @@
+<%= stylesheet_link_tag 'mypages', media: 'all', 'data-turbolinks-track': 'reload' %>
 コミュニティ詳細
 <div class="position-relative overflow-hidden text-center bg-light">
-  <div class="col-md-5 p-lg-3 mx-auto my-3 border border-dark">
     コミュニティ名
-    <h1 class="display-4 fw-normal border border-dark"><%=@community.name %></h1>
+    <h1 class="display-4 fw-normal background"><%=@community.name %></h1>
     <%= image_tag "default_icon", class:"img-fluid"%><br>
     コミュニティ説明
-    <p class="lead fw-normal border border-dark"><%=@community.content %></p>
+    <p class="lead fw-normal background"><%=@community.content %></p>
     参加者（参加人数を表示したいい）
-    <p class="lead fw-normal border border-dark">橋本環奈、本田翼、広瀬すず、広瀬アリス</p>
+    <p class="lead fw-normal background">橋本環奈、本田翼、広瀬すず、広瀬アリス</p>
     タグ
-    <p class="lead fw-normal border border-dark">#ウンチブリブリブリムストーン</p>
+    <p class="lead fw-normal background">#ウンチブリブリブリムストーン</p>
     <div class="d-flex justify-content-around">
       <a class="btn btn-outline-secondary w-50" href="#">参加</a>
-      <a class="btn btn-outline-secondary w-50" href="/communities">コミュニティ一覧へ</a>
+      <a class="btn btn-outline-secondary w-50" href="/communities">コミュニティ一覧へ戻る</a>
     </div>
-  </div>
-
-
-
 </div>
