--- a/app/views/mypages/index.html.erb
+++ b/app/views/mypages/index.html.erb
@@ -43,7 +43,7 @@
                <p class="m-1 background">
                  <%= @profiles.hobby %>
                </p>
-               <div class="align-self-center">
+               <div class="row">
                <%= link_to "編集", edit_mypage_path(current_user.id),class:'btn btn-outline-primary btn-lg m-1'%>
                </div>
                               　　
