コミュニティshowレイアウト 完成！！！

--- a/app/assets/stylesheets/communities.scss
+++ b/app/assets/stylesheets/communities.scss
@@ -30,6 +30,11 @@ img{
   display: none;
 }
 
-.background{
-  background-color: #eee;
+.flex-equal > * {
+  flex: 1;
+}
+@media (min-width: 768px) {
+  .flex-md-equal > * {
+    flex: 1;
+  }
 }
