--- a/app/views/communities/new.html.erb
+++ b/app/views/communities/new.html.erb
@@ -1,10 +1,16 @@
 <%= stylesheet_link_tag 'communities', media: 'all', 'data-turbolinks-track': 'reload' %>
-<%= stylesheet_link_tag "cropper.min" %>
-<%= javascript_pack_tag "cropper" %>
-<%= javascript_pack_tag "jquery-cropper" %>
-<%= javascript_pack_tag "communities/new" %>
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.min.js" type="text/javascript" charset="utf-8"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.12/jquery-ui.min.js" type="text/javascript" charset="utf-8"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/tag-it/2.0/js/tag-it.min.js" type="text/javascript" charset="utf-8"></script>
+<link rel="stylesheet" type="text/css" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1/themes/flick/jquery-ui.css">
+<link href="https://cdnjs.cloudflare.com/ajax/libs/tag-it/2.0/css/jquery.tagit.min.css" rel="stylesheet" type="text/css">
 
+<% javascript_pack_tag "communities/new" %>
 <script>
+    $(document).ready(function() {
+        $("#tags").tagit();
+    });
+
     function previewImage(obj) {
         var fileReader = new FileReader();
         fileReader.onload = function() {
@@ -23,7 +29,7 @@
         <div class="uploader">
           <div class="form1">
             <label>
-                <%= image_tag "default_icon" , :size => '200x200',id:"preview",class: "d-block mx-auto mb-4 border border-success rounded"%>
+              <%= image_tag "default_icon" , :size => '200x200',id:"preview",class: "d-block mx-auto mb-4 border border-success rounded"%>
             </label><br /><br />
           </div>
         </div>
@@ -43,18 +49,23 @@
 
           <div class="col-sm-12">
             <%= f.label "アイコン", class:"form-label"%>
-            <%= f.file_field :icon,autocomplete: "icon", class: "form-control",:placeholder=>"icon",onchange: "previewImage(this);",type: "file"%>
+            <%= f.file_field :icon,autocomplete: "icon", class: "form-control",:placeholder=>"icon",onchange: "previewImage(this);"%>
           </div>
 
-          <hr class="my-4">
+          <div class="col-sm-12">
+            <%= f.label "タグ" %>
+            <ul id="tags">
+              <%= f.text_field nil, class: "form-control" %>
+            </ul>
+          </div>
+
 
           <div class="col-sm-12 text-center">
             <%= f.submit "新規作成", class:"w-50 btn btn-primary btn-lg mb-4"%>
           </div>
+
         </div>
       </div>
-    <% end %>
-  </main>
+    </main>
+  <% end %>
 </div>
-
-
