--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -19,7 +19,7 @@
         <h1>友だち</h1>
       </div>
 
-      <hr class="style" style="border-top: 1px solid #8c8b8b">
+      <hr class="style" style="border-top:  1px solid #000000">
 
       <form id="form1" action="自分のサイトURL" method="get">                     <!--検索ボックス作成-->
         <input id="sbox1" id="s" name="s" type="text" placeholder="友達を検索" />
@@ -29,6 +29,7 @@
       <button
         type="button"
         class="btn btn-secondary btn-lg w-100 mt-2"
+        style="background-color: #00A1AE"
         data-toggle="collapse"
         data-target="#collapseExample1"
         aria-expanded="false"
@@ -65,6 +66,7 @@
       <button
         type="button"
         class="btn btn-secondary btn-lg w-100 mt-2"
+        style="background-color: #00A1AE"
         data-toggle="collapse"
         data-target="#collapseExample2"
         aria-expanded="false"
@@ -103,7 +105,7 @@
         <h1>コミュニティ</h1>
       </div>
 
-      <hr class="style" style="border-top: 1px solid #8c8b8b">
+      <hr class="style" style="border-top: 1px solid #000000">
 
       <form id="form2" action="自分のサイトURL" method="get">                     <!--検索ボックス作成-->
         <input id="sbox1" id="s" name="s" type="text" placeholder="グループを検索" />
@@ -112,6 +114,7 @@
       <button
         type="button"
         class="btn btn-secondary btn-lg w-100 mt-2"
+        style="background-color: #00A1AE"
         data-toggle="collapse"
         data-target="#collapseExample3"
         aria-expanded="false"
@@ -130,6 +133,7 @@
       <button
         type="button"
         class="btn btn-secondary btn-lg w-100 mt-2"
+        style="background-color: #00A1AE"
         data-toggle="collapse"
         data-target="#collapseExample3"
         aria-expanded="false"
